--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,15 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        (function () {
+            emailjs.init("kranjaly2001@gmail.com"); // Replace with your EmailJS user ID
+        })();
+    </script>
 </head>
 
 <body>
-
 
     <section class="header">
         <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
@@ -57,8 +60,8 @@
                                     <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                                        aria-expanded="false">
                                         Events
                                     </a>
                                     <ul class="dropdown-menu">
@@ -78,7 +81,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
-
+                                <li class="nav-item">
+                                    <a class="nav-link" href="membership.html">Membership</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -87,51 +92,64 @@
         </nav>
     </section>
 
-    <div class="close-btn">
-        <a href="index.html">
-    </div>
-
+    <!-- Contact Section -->
     <div class="main">
-        <div class="container">
+        <div class="container contact-section">
             <div class="image">
-                <img src="images/Logo.png" alt="">
+                <img src="images/Logo.png" alt="Logo">
+                <a href="membership.html" class="join-btn" target="_blank">Join Us</a>
+
             </div>
+
+
             <div class="form-area">
-                <h2>Contact US</h2>
-                <form action="">
-                    <input type="text" placeholder="Full Name">
-                    <input type="email" placeholder="Email">
-                    <input type="text" placeholder="Message">
-                    <removethis-textarea cols="30" rows="3" placeholder="Your Message">
-                    </removethis-textarea>
+                <h2>Contact Us</h2>
+                <form id="contact-form">
+                    <input type="text" name="from_name" placeholder="Full Name" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
                     <button type="submit">Send Message</button>
                 </form>
 
                 <div class="social-icons">
-                    <h2>Follow Us</h2> <span> </span>
+                    <h3>Follow Us</h3>
                     <a href="https://www.facebook.com/KALAAMalayalee?mibextid=LQQJ4d"><i
                             class="fa-brands fa-facebook"></i></a>
                     <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
                     <a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
-                    <!-- Add more social media icons and links as needed -->
                 </div>
             </div>
-            <div class="image-container">
-            </div>
         </div>
+    </div>
 
 
-        <footer class="">
-            <div class="p-3">
-                &copy; 2024 My Website. All rights reserved.
-            </div>
-        </footer>
+    <footer class="">
+        <div class="p-3">
+            &copy; 2024 My Website. All rights reserved.
+        </div>
+    </footer>
 
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        document.getElementById('contact-form').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            emailjs.sendForm('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', this)
+                .then(() => {
+                    alert("Message sent successfully!");
+                    this.reset();
+                }, (error) => {
+                    alert("Failed to send message. Please try again later.");
+                    console.error(error);
+                });
+        });
+    </script>
+
 </body>
 
 </html>
