--- a/gallery.html
+++ b/gallery.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gallery</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  
-   <link rel="stylesheet" href="css/gallery.css">
-   <link rel="stylesheet" href="css/index.css">
-   <link rel="stylesheet" href="css/footer.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gallery</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
 
-   <link
-   href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-   rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-  
+
 </head>
+
 <body>
 
-  
+
     <section class="header">
-       <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
+        <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
@@ -59,8 +61,8 @@
                                     <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                                        aria-expanded="false">
                                         Events
                                     </a>
                                     <ul class="dropdown-menu">
@@ -80,7 +82,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
-
+                                <li class="nav-item">
+                                    <a class="nav-link" href="membership.html">Membership</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -89,60 +93,100 @@
         </nav>
     </section>
 
-<div class="container">
-  <h1 class="gallery-title">Gallery</h1>
+    <div class="container">
+        <h1 class="gallery-title">Gallery</h1>
 
-  <section class="event">
-    <h5 class="event-title">Onam Celebration</h5>
-    <div class="gallery-row">
-      <img src="images/gallery1.jpg" alt="Onam 1">
-      <img src="images/gallery2.jpg" alt="Onam 2">
-      <img src="images/gallery4.jpg" alt="Onam 3">
-      <img src="images/gallery5.jpg" alt="Onam 4">
-      <img src="images/gallery3.jpg" alt="Onam 5">
+        <div class="gallery-grid">
+            <section class="event" data-images="gallery1.jpg,gallery2.jpg,gallery3.jpg,gallery4.jpg,gallery5.jpg">
+                <h5 class="event-title">Onam Celebration</h5>
+                <img src="images/gallery1.jpg" alt="Onam" class="main-img" onclick="openGallery(this)">
+            </section>
+
+            <section class="event" data-images="gallery3.jpg,gallery5.jpg,gallery1.jpg,gallery4.jpg">
+                <h5 class="event-title">X-mas Celebration</h5>
+                <img src="images/gallery3.jpg" alt="Xmas" class="main-img" onclick="openGallery(this)">
+            </section>
+
+            <section class="event" data-images="gallery1.jpg,gallery3.jpg,gallery2.jpg,gallery4.jpg">
+                <h5 class="event-title">Vishu Celebration</h5>
+                <img src="images/gallery1.jpg" alt="Vishu" class="main-img" onclick="openGallery(this)">
+            </section>
+
+            <!-- Add more events here if needed -->
+        </div>
     </div>
-  </section>
 
-  <section class="event">
-    <h5 class="event-title">X-mas Celebration</h5>
-    <div class="gallery-row">
-      <img src="images/gallery3.jpg" alt="Xmas 1">
-      <img src="images/gallery5.jpg" alt="Xmas 2">
-      <img src="images/gallery1.jpg" alt="Xmas 3">
-      <img src="images/gallery4.jpg" alt="Xmas 4">
+    <!-- Popup Modal -->
+    <div id="popup-gallery" class="popup hidden">
+        <button class="back-btn" onclick="closeGallery()">← Back to Gallery</button>
+        <div class="popup-images" id="popup-images"></div>
     </div>
-  </section>
 
-  <section class="event">
-    <h5 class="event-title">Vishu Celebration</h5>
-    <div class="gallery-row">
-      <img src="images/gallery1.jpg" alt="Vishu 1">
-      <img src="images/gallery3.jpg" alt="Vishu 2">
-      <img src="images/gallery2.jpg" alt="Vishu 3">
-      <img src="images/gallery4.jpg" alt="Vishu 4">
+
+    <!-- Fullscreen Image Viewer -->
+    <div id="fullscreen-view" class="fullscreen hidden">
+        <span class="close-fullscreen" onclick="closeFullscreen(event)">×</span>
+        <img id="fullscreen-img" src="" alt="Full Image">
     </div>
-  </section>
-</div>
 
 
-<footer class="">
-    <div class="p-3">
-        &copy; 2024 My Website. All rights reserved.
-    </div>
-</footer>
+    <footer class="">
+        <div class="p-3">
+            &copy; 2024 My Website. All rights reserved.
+        </div>
+    </footer>
 
+    <!-- Bootstrap JS (Optional) -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <!-- Bootstrap JS (Optional) -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script>
+        function openGallery(el) {
+            const section = el.closest('.event');
+            const imageList = section.dataset.images.split(',');
+            const popupImagesDiv = document.getElementById('popup-images');
+            popupImagesDiv.innerHTML = '';
+
+            imageList.forEach(imgName => {
+                const img = document.createElement('img');
+                img.src = 'images/' + imgName;
+                img.alt = 'Gallery image';
+                img.onclick = () => openFullscreen(img.src);
+                popupImagesDiv.appendChild(img);
+            });
+
+            document.getElementById('popup-gallery').classList.remove('hidden');
+        }
+
+        function closeGallery() {
+            document.getElementById('popup-gallery').classList.add('hidden');
+        }
+
+        function openFullscreen(src) {
+            const viewer = document.getElementById('fullscreen-view');
+            const img = document.getElementById('fullscreen-img');
+            img.src = src;
+            viewer.classList.remove('hidden');
+        }
+
+        function closeFullscreen(event) {
+            // Close if user clicks background or the close button
+            if (event.target.id === 'fullscreen-view' || event.target.classList.contains('close-fullscreen')) {
+                document.getElementById('fullscreen-view').classList.add('hidden');
+            }
+        }
+
+
+    </script>
+
 
 
 </body>
+
 </html>
