--- a/membership.html
+++ b/membership.html
@@ -2,20 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us</title>
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/aboutus.css" />
-    <link rel="stylesheet" href="css/footer.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/membership.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
 </head>
 
 <body>
+
     <section class="header">
         <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
             <div class="container-fluid">
@@ -29,7 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
-                    <div class="col-12 text-center">
+                    <div class="col-12">
                         <a class="navbar-brand text-decoration-none" href="index.html">
                             <span class="fs-1">കലാ</span> <span class="fs-3">PHILLY ASSOCIATION</span>
                         </a>
@@ -41,7 +44,7 @@
                                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#about">About Us</a>
+                                    <a class="nav-link" href="index.html#about">About Us</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -79,43 +82,21 @@
             </div>
         </nav>
     </section>
-    <!-- Hero Section -->
-    <section class="hero-section position-relative text-white d-flex align-items-center justify-content-center"
-        style="height: 60vh; background: url('images/kala.jpg') center/cover no-repeat;">
-        <div class="position-absolute top-0 start-0 w-100 h-100 bg-dark bg-opacity-50"></div>
-        <h1 class="position-relative z-1 display-3 fw-bold">About Us</h1>
-    </section>
 
-    <!-- About Section -->
-    <section class="container py-5">
-        <div class="row align-items-center g-5">
-            <!-- Image Gallery -->
-            <div class="col-lg-6">
-                <div class="row g-3">
-                    <div class="col-6">
-                        <img src="images/kala.jpg" class="img-fluid rounded shadow-sm" alt="Team Image 1">
-                    </div>
-                    <div class="col-6">
-                        <img src="images/kala.jpg" class="img-fluid rounded shadow-sm" alt="Team Image 2">
-                    </div>
-                </div>
-            </div>
+    <div class="membership-wrapper">
+        <div class="membership-box">
+            <h1>Become a Member</h1>
+            <p>Join our community and be a part of something amazing!</p>
 
-            <!-- About Text -->
-            <div class="col-lg-6">
-                <h2 class="fw-bold text-warning">Who We Are</h2>
-                <p class="text-secondary fs-5 mt-3">
-                    Kalā Philly Association is a community-driven group committed to celebrating cultural heritage,
-                    fostering creativity, and building strong connections among members.
-                </p>
-                <p class="text-secondary fs-5">
-                    Our events, outreach programs, and artistic collaborations reflect our shared passion for culture,
-                    inclusivity, and service. We strive to inspire and unite through cultural expression and collective
-                    action.
-                </p>
-            </div>
+            <form id="membership-form">
+                <input type="text" name="full_name" placeholder="Full Name" required />
+                <input type="email" name="email" placeholder="Email Address" required />
+                <input type="tel" name="phone" placeholder="Phone Number" required />
+                <textarea name="about" placeholder="Tell us why you want to join..." rows="4"></textarea>
+                <button type="submit">Join Now</button>
+            </form>
         </div>
-    </section>
+    </div>
 
 
     <footer class="">
@@ -124,8 +105,9 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
 </body>
