--- a/news.html
+++ b/news.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/news.css"> 
+    <link rel="stylesheet" href="css/news.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
     <style>
         /* Custom CSS for reducing space in navbar */
         .navbar-nav {
-            margin-top: 0.25%; /* Adjust margin-right to reduce space */
+            margin-top: 0.25%;
+            /* Adjust margin-right to reduce space */
         }
     </style>
 </head>
+
 <body>
 
     <section class="header">
@@ -55,8 +58,8 @@
                                     <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                                        aria-expanded="false">
                                         Events
                                     </a>
                                     <ul class="dropdown-menu">
@@ -76,7 +79,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
-
+                                <li class="nav-item">
+                                    <a class="nav-link" href="membership.html">Membership</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -86,18 +91,18 @@
     </section>
 
     <section class="mt-5 pt-5">
-        
-            <div class="d-flex justify-content-center align-items-md-center mt-5">
-                <div class="">
-                    <h1 class="text-center mt-3">Latest News</h1>
-                    <button class="btn btn-primary" type="button" disabled>
-                        <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
-                        <span role="status">Loading...</span>
-                    </button>
-                </div>
+
+        <div class="d-flex justify-content-center align-items-md-center mt-5">
+            <div class="">
+                <h1 class="text-center mt-3">Latest News</h1>
+                <button class="btn btn-primary" type="button" disabled>
+                    <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                    <span role="status">Loading...</span>
+                </button>
             </div>
+        </div>
     </section>
-    
+
 
     <footer class="">
         <div class="p-3">
@@ -105,10 +110,11 @@
         </div>
     </footer>
 
-   
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
