--- a/team.html
+++ b/team.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,17 +9,18 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
+
 <body>
 
     <section class="header">
-       <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
+        <nav class="navbar custom-gradient navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand text-decoration-none" href="index.html">
@@ -30,7 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center row m-0" id="navbarSupportedContent">
-                    <div class="col-12 text-center" >
+                    <div class="col-12 text-center">
                         <a class="navbar-brand text-decoration-none" href="index.html">
                             <span class="fs-1">കലാ</span> <span class="fs-3">PHILLY ASSOCIATION</span>
                         </a>
@@ -49,8 +51,8 @@
                                     <a class="nav-link" href="index.html#vs">Vision & Mission</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                                        aria-expanded="false">
                                         Events
                                     </a>
                                     <ul class="dropdown-menu">
@@ -70,7 +72,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
-
+                                <li class="nav-item">
+                                    <a class="nav-link" href="membership.html">Membership</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -79,57 +83,58 @@
         </nav>
     </section>
 
-<div class="container team-section text-center">
-    <h1 class="heading mb-5">Meet Our Team</h1>
-    <div class="row justify-content-center g-5">
-        <div class="col-md-4 col-sm-6 team-member">
-            <img src="images/p1.jpg" class="img-fluid rounded-circle team-img" alt="Abraham">
-            <h4 class="mt-3 mb-1">Abraham</h4>
-            <p class="text-muted">President</p>
-        </div>
-        <div class="col-md-4 col-sm-6 team-member">
-            <img src="images/p2.jpg" class="img-fluid rounded-circle team-img" alt="Alfred">
-            <h4 class="mt-3 mb-1">Alfred</h4>
-            <p class="text-muted">General Secretary</p>
-        </div>
-        <div class="col-md-4 col-sm-6 team-member">
-            <img src="images/p3.jpg" class="img-fluid rounded-circle team-img" alt="Daniel">
-            <h4 class="mt-3 mb-1">Daniel</h4>
-            <p class="text-muted">Treasurer</p>
-        </div>
-        <div class="col-md-4 col-sm-6 team-member">
-            <img src="images/p4.jpg" class="img-fluid rounded-circle team-img" alt="Alwin">
-            <h4 class="mt-3 mb-1">Alwin</h4>
-            <p class="text-muted">Vice President</p>
-        </div>
-        <div class="col-md-4 col-sm-6 team-member">
-            <img src="images/p5.jpg" class="img-fluid rounded-circle team-img" alt="George">
-            <h4 class="mt-3 mb-1">George</h4>
-            <p class="text-muted">Joint Secretary</p>
-        </div>
-        <div class="col-md-4 col-sm-6 team-member">
-            <img src="images/p6.jpg" class="img-fluid rounded-circle team-img" alt="Alex">
-            <h4 class="mt-3 mb-1">Alex</h4>
-            <p class="text-muted">Joint Treasurer</p>
+    <div class="container team-section text-center">
+        <h1 class="heading mb-5">Meet Our Team</h1>
+        <div class="row justify-content-center g-5">
+            <div class="col-md-4 col-sm-6 team-member">
+                <img src="images/p1.jpg" class="img-fluid rounded-circle team-img" alt="Abraham">
+                <h4 class="mt-3 mb-1">Abraham</h4>
+                <p class="text-muted">President</p>
+            </div>
+            <div class="col-md-4 col-sm-6 team-member">
+                <img src="images/p2.jpg" class="img-fluid rounded-circle team-img" alt="Alfred">
+                <h4 class="mt-3 mb-1">Alfred</h4>
+                <p class="text-muted">General Secretary</p>
+            </div>
+            <div class="col-md-4 col-sm-6 team-member">
+                <img src="images/p3.jpg" class="img-fluid rounded-circle team-img" alt="Daniel">
+                <h4 class="mt-3 mb-1">Daniel</h4>
+                <p class="text-muted">Treasurer</p>
+            </div>
+            <div class="col-md-4 col-sm-6 team-member">
+                <img src="images/p4.jpg" class="img-fluid rounded-circle team-img" alt="Alwin">
+                <h4 class="mt-3 mb-1">Alwin</h4>
+                <p class="text-muted">Vice President</p>
+            </div>
+            <div class="col-md-4 col-sm-6 team-member">
+                <img src="images/p5.jpg" class="img-fluid rounded-circle team-img" alt="George">
+                <h4 class="mt-3 mb-1">George</h4>
+                <p class="text-muted">Joint Secretary</p>
+            </div>
+            <div class="col-md-4 col-sm-6 team-member">
+                <img src="images/p6.jpg" class="img-fluid rounded-circle team-img" alt="Alex">
+                <h4 class="mt-3 mb-1">Alex</h4>
+                <p class="text-muted">Joint Treasurer</p>
+            </div>
         </div>
     </div>
-</div>
 
 
-<footer class="">
-    <div class="p-3">
-        &copy; 2024 My Website. All rights reserved.
-    </div>
-</footer>
+    <footer class="">
+        <div class="p-3">
+            &copy; 2024 My Website. All rights reserved.
+        </div>
+    </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 
 </body>
+
 </html>
