--- a/upcoming.html
+++ b/upcoming.html
@@ -71,6 +71,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="membership.html">Membership</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -79,101 +82,101 @@
     </nav>
   </section>
 
-<section id="events" class="py-5 mb-5 bg-light">
-  <div class="container">
-    <h1 class="text-center fw-bold mb-5 text-warning">Upcoming Events</h1>
-    
-    <div class="row g-5">
-      <!-- Event Card 1 -->
-      <div class="col-md-6 col-lg-4">
-        <div class="card shadow border-0 h-100">
-          <img src="images/upcoming.png" class="card-img-top img-fluid" alt="Convention" />
-          <div class="card-body">
-            <h3 class="card-title text-center text-dark">Convention</h3>
-            <p class="card-text text-secondary text-center">
-              Join our annual cultural convention celebrating community, heritage, and creativity.
-            </p>
+  <section id="events" class="py-5 mb-5 bg-light">
+    <div class="container">
+      <h1 class="text-center fw-bold mb-5 text-warning">Upcoming Events</h1>
+
+      <div class="row g-5">
+        <!-- Event Card 1 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card shadow border-0 h-100">
+            <img src="images/upcoming.png" class="card-img-top img-fluid" alt="Convention" />
+            <div class="card-body">
+              <h3 class="card-title text-center text-dark">Convention</h3>
+              <p class="card-text text-secondary text-center">
+                Join our annual cultural convention celebrating community, heritage, and creativity.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Event Card 2 -->
-      <div class="col-md-6 col-lg-4">
-        <div class="card shadow border-0 h-100">
-          <img src="images/event1.jpg" class="card-img-top img-fluid" alt="Carrom" />
-          <div class="card-body">
-            <h3 class="card-title text-center text-dark">Carrom</h3>
-            <p class="card-text text-secondary text-center">
-              Friendly carrom tournament for all ages. Sign up with your team today!
-            </p>
+        <!-- Event Card 2 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card shadow border-0 h-100">
+            <img src="images/event1.jpg" class="card-img-top img-fluid" alt="Carrom" />
+            <div class="card-body">
+              <h3 class="card-title text-center text-dark">Carrom</h3>
+              <p class="card-text text-secondary text-center">
+                Friendly carrom tournament for all ages. Sign up with your team today!
+              </p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Event Card 3 -->
-      <div class="col-md-6 col-lg-4">
-        <div class="card shadow border-0 h-100">
-          <img src="images/event2.jpg" class="card-img-top img-fluid" alt="Charity" />
-          <div class="card-body">
-            <h3 class="card-title text-center text-dark">Charity</h3>
-            <p class="card-text text-secondary text-center">
-              Support our outreach efforts with this community-driven fundraising event.
-            </p>
+        <!-- Event Card 3 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card shadow border-0 h-100">
+            <img src="images/event2.jpg" class="card-img-top img-fluid" alt="Charity" />
+            <div class="card-body">
+              <h3 class="card-title text-center text-dark">Charity</h3>
+              <p class="card-text text-secondary text-center">
+                Support our outreach efforts with this community-driven fundraising event.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Event Card 4 -->
-      <div class="col-md-6 col-lg-4 my-5 py-5">
-        <div class="card shadow border-0 h-100">
-          <img src="images/event 3.jpg" class="card-img-top img-fluid" alt="Onam" />
-          <div class="card-body">
-            <h3 class="card-title text-center text-dark">Onam</h3>
-            <p class="card-text text-secondary text-center">
-              Celebrate Onam with traditional food, games, and performances.
-            </p>
+        <!-- Event Card 4 -->
+        <div class="col-md-6 col-lg-4 my-5 py-5">
+          <div class="card shadow border-0 h-100">
+            <img src="images/event 3.jpg" class="card-img-top img-fluid" alt="Onam" />
+            <div class="card-body">
+              <h3 class="card-title text-center text-dark">Onam</h3>
+              <p class="card-text text-secondary text-center">
+                Celebrate Onam with traditional food, games, and performances.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Event Card 5 -->
-      <div class="col-md-6 col-lg-4 my-5 py-5">
-        <div class="card shadow border-0 h-100">
-          <img src="images/event4.jpg" class="card-img-top img-fluid" alt="Onam" />
-          <div class="card-body">
-            <h3 class="card-title text-center text-dark">Onam</h3>
-            <p class="card-text text-secondary text-center">
-              Another Onam celebration filled with vibrant culture and joy.
-            </p>
+        <!-- Event Card 5 -->
+        <div class="col-md-6 col-lg-4 my-5 py-5">
+          <div class="card shadow border-0 h-100">
+            <img src="images/event4.jpg" class="card-img-top img-fluid" alt="Onam" />
+            <div class="card-body">
+              <h3 class="card-title text-center text-dark">Onam</h3>
+              <p class="card-text text-secondary text-center">
+                Another Onam celebration filled with vibrant culture and joy.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Event Card 6 -->
-      <div class="col-md-6 col-lg-4 my-5 py-5">
-        <div class="card shadow border-0 h-100">
-          <img src="images/event5.jpg" class="card-img-top img-fluid" alt="Carrom" />
-          <div class="card-body">
-            <h3 class="card-title text-center text-dark">Carrom</h3>
-            <p class="card-text text-secondary text-center">
-              Another chance to test your skills and win in our Carrom challenge!
-            </p>
+        <!-- Event Card 6 -->
+        <div class="col-md-6 col-lg-4 my-5 py-5">
+          <div class="card shadow border-0 h-100">
+            <img src="images/event5.jpg" class="card-img-top img-fluid" alt="Carrom" />
+            <div class="card-body">
+              <h3 class="card-title text-center text-dark">Carrom</h3>
+              <p class="card-text text-secondary text-center">
+                Another chance to test your skills and win in our Carrom challenge!
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
 
   <footer class="">
     <div class="p-3">
-        &copy; 2024 My Website. All rights reserved.
+      &copy; 2024 My Website. All rights reserved.
     </div>
-</footer>
+  </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 
